--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<table>
+		<th>roll number
+			<tr></tr>
+			<tr></tr>
+		</th>
+		<th>name
+			<tr></tr>
+			<tr></tr>
+		</th>
+		</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
