--- a/main.html
+++ b/main.html
@@ -7,15 +7,19 @@
 </head>
 
 <body>
-	<table>
-		<th>roll number
-			<tr></tr>
-			<tr></tr>
-		</th>
-		<th>name
-			<tr></tr>
-			<tr></tr>
-		</th>
+	<table height="200", width="200", border="1", bordercolor="black">
+		<tr>
+			<th>roll number</th>
+			<th>name</th>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			</tr>
 		</table>
     <script type="text/javascript" src="./script.js">
 </script>
