--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<table height="200", width="200", border="1", bordercolor="black">
-		<tr>
+		<tr height="66">
 			<th>roll number</th>
 			<th>name</th>
 		</tr>
