--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<table height="200", width="200", border="1", bordercolor="black">
 		<tr height="66">
-			<th>roll number</th>
-			<th>name</th>
+			<th>Roll number</th>
+			<th>Name</th>
 		</tr>
 		<tr>
 			<td></td>
