--- a/main.html
+++ b/main.html
@@ -8,10 +8,15 @@
 
 <body>
 	<table height="200", width="200", border="1", bordercolor="black">
+		<thead>
 		<tr height="66">
+			
 			<th>Roll number</th>
 			<th>Name</th>
+			
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td></td>
 			<td></td>
@@ -19,7 +24,7 @@
 		<tr>
 			<td></td>
 			<td></td>
-			</tr>
+			</tr></tbody>
 		</table>
     <script type="text/javascript" src="./script.js">
 </script>
